--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,12 +46,14 @@ android {
     }
 
     defaultConfig {
-        minSdk = 21
+        minSdk = 23
     }
 
     dependencies {
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
+        implementation("org.godotengine:godot:4.2.1.stable")
+        implementation 'androidx.appcompat:appcompat:1.6.1'
     }
 
     testOptions {
