--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,6 +46,11 @@ android {
     }
 
     defaultConfig {
+        // The default ignore pattern for the 'assets' directory includes hidden files and
+        // directories which are used by Godot projects, so we override it with the following.
+        androidResources {
+            ignoreAssetsPattern "!.svn:!.git:!.gitignore:!.ds_store:!*.scc:<dir>_*:!CVS:!thumbs.db:!picasa.ini:!*~"
+        }
         minSdk = 23
     }
 
