--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.my_org.flutter_godot_widget">
 
+    <application
+        android:allowBackup="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:usesCleartextTraffic="true">
 
+        <!-- Godot'u Fragment olmadan çalıştırmak için kullanılan Activity -->
+        <activity android:name="com.my_org.flutter_godot_widget.GodotHostActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:configChanges="orientation|screenSize"
+            android:exported="false"/> <!-- Güvenlik için dışarıdan çağrılmasını kapattık -->
+
+    </application>
 </manifest>
